Updated to development build 0.2. Read README for more information

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,8 +1,11 @@
 name: BlockAlert
-version: 0.1
+version: 0.2
 main: me.goodyou10.BlockAlert.BlockAlert
 author: goodyou10
 permissions:
     blockalert.admin:
         description: Able to recieve block alert broadcasts
         default: op
+commands:
+    blockalert:
+        description: All Block Alert Commands
